<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_dialog"
    android:layout_marginStart="@dimen/_12ssp"
    android:layout_marginEnd="@dimen/_12ssp"
    android:id="@+id/layoutDeleteNoteContainer"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/imageDeleteNote"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:src="@drawable/ic_delete"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorWhite"
        android:contentDescription="@string/app_name"
        />

    <TextView
        android:id="@+id/textDeleteNoteHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_note"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13ssp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        app:layout_constraintStart_toEndOf="@id/imageDeleteNote"
        app:layout_constraintBottom_toBottomOf="@id/imageDeleteNote"
        app:layout_constraintTop_toTopOf="@id/imageDeleteNote"
        android:layout_marginStart="@dimen/_8sdp"
        />

    <TextView
        android:id="@+id/textDeleteNoteMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_delete_the_note"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/imageDeleteNote"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu"
        android:includeFontPadding="false"
        android:layout_marginStart="@dimen/_16sdp"
        />

    <TextView
        android:id="@+id/textDeleteNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textColor="@color/colorDelete"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        app:layout_constraintTop_toBottomOf="@id/textDeleteNoteMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="@dimen/_16ssp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        />

    <TextView
        android:id="@+id/textCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="@dimen/_11ssp"
        android:textColor="@color/colorIcons"
        android:fontFamily="@font/ubuntu"
        android:includeFontPadding="false"
        app:layout_constraintEnd_toStartOf="@id/textDeleteNote"
        app:layout_constraintTop_toTopOf="@id/textDeleteNote"
        app:layout_constraintBottom_toBottomOf="@id/textDeleteNote"
        android:layout_marginEnd="@dimen/_12ssp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>